update the readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,3 @@
-== Finish V1
-
-= show new url as a link (that can be clicked). -check
-
-
-
-====Tests
-== write tests for current features = (Long url in short url out, form disappears ,link shows, )
-
-===UI
-Design
-
-deploy
-= js redirect forced headers.
-complete. 
+= Hunio
+== URL Shortener
+=== Responsive (fluid and adaptive) flat design 
